examples/neg/lambdas/simpleescape.effekt
effect Raise(msg: String): Unit
effect Flip(): Boolean

def main() = {

  try {
    def block(msg: String): Unit / {} = { do Raise(msg) }
    val f = if (do Flip()) {
      fun() { block("first") }
    } else {
      fun() { block("second") }
    }
    f
  } with Raise { msg =>
    println("exception" ++ msg); resume(())
  } with Flip {
    resume(true); resume(false)
  }

}
